# EncDec

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg
src/folder_encryptor/: constants.py  crypto_ops.py  errors.py  file_ops.py  logger_config.py  main.py  models.py  processing_engine.py  utils.py
